
  install_wx.make
  install_wxpdfdoc.make
  msw_cygwin.make
Use MinGW-w64 cross compiler.

20160118T0417Z <gchicares@sbcglobal.net> [455]

  msw_cygwin.make
Fix defect introduced 20160118T0304Z: sys-root missing triplet.

20160118T0419Z <gchicares@sbcglobal.net> [455]

  workhorse.make
Fix defect introduced 20160118T0304Z: sh quoting.

20160118T1521Z <gchicares@sbcglobal.net> [455]

  cgicc-3.1.4.md5sums
  cgicc-3.1.4.patch
Repair defects detected by gcc-4.9.2 .

20160120T1128Z <gchicares@sbcglobal.net> [455]

  workhorse.make
Allow gcc-4.9.1 .

20160120T1129Z <gchicares@sbcglobal.net> [455]

  install_cygwin.bat
Remove cross compiler; add 'bsdtar'.

20160120T1131Z <gchicares@sbcglobal.net> [455]

  install_wx.make
  install_wxpdfdoc.make
  msw_cygwin.make
Prefer native to cross MinGW-w64 compiler.

20160120T1135Z <gchicares@sbcglobal.net> [455]

  install_cygwin.bat
  install_mingw.make
  install_msw.sh
Replace mingw.org with MinGW-w64 toolchain.

20160120T1913Z <gchicares@sbcglobal.net> [455]

  libxslt-1.1.17-lmi.patch
  test_coding_rules.cpp
Don't use two-element mkdir() with msw (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00022.html

20160120T1917Z <gchicares@sbcglobal.net> [455]

  install_libxml2_libxslt.make
Disable threading to avoid a catastrophic problem (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00022.html

 <gchicares@sbcglobal.net> [455]

  install_libxml2_libxslt.make
Disable threading to avoid a catastrophic problem (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00022.html

20160120T1920Z <gchicares@sbcglobal.net> [455]

  install_libxml2_libxslt.make
Disable zlib to avoid a catastrophic problem (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00022.html

20160120T1924Z <gchicares@sbcglobal.net> [455]

  install_libxml2_libxslt.make
  install_mpatrol.make
Specify --host consistently (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00022.html
